Made changes in JS to include REST call for getting City's latitude/longitude/weather details, changes in message.html to add few textboxed

--- a/src/main/webapp/message.html
+++ b/src/main/webapp/message.html
@@ -12,23 +12,32 @@
 
 <tr>
 	<td width="100">
-		<label for="strMessage">Message:</label>
+		<label for="message">Message:</label>
 	</td>
 	<td>
-		<input type = "text" name = "strMessage">
+		<input type = "text" name = "message">
 	</td>
 </tr>
 
-<!--  
+ 
 <tr>
 	<td width="100">
-		<label for="strFirstName">First name:</label>
+		<label for="userName">User name:</label>
 	</td>
 	<td>
-		<input type = "text" name = "strFirstName">
+		<input type = "text" name = "userName">
 	</td>
 </tr>
--->
+
+<tr>
+	<td width="100">
+		<label for="city">City:</label>
+	</td>
+	<td>
+		<input type = "text" name = "city" id="city">
+	</td>
+</tr>
+
 
 <tr>
 	<td>
